# auth.service

./: .dockerignore  .env  Cargo.toml  Dockerfile  docker-compose.yml  documentation.md  user.yml
.github/workflows/: prod.yml
docker/postgres_init/: init.sql
migrations/: 20231108032955_init.up.sql  20231117193312_init.down.sql  20231117193312_init.up.sql
proto/: userinfo.proto
src/: main.rs
src/database/: mod.rs
src/handlers/: auth.rs  user.rs
src/middleware/: auth.rs
src/models/: mod.rs  user.rs
src/schema/: mod.rs  url.rs  user.rs
src/services/: auth.rs  user.rs
src/state/: mod.rs
