[package]
name = "user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-web = "4.3.1"
serde = { version = "1.0.140", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["json"]}
env_logger = "0.9.0"
jsonwebtoken= "8.1.1"
base64 = "0.13.0"
serde_json = "1.0.105"
anyhow = "1.0.60"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
sqlx = { version = "0.7.1", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4.30", features = ["serde"] }
dotenv = "0.15.0"

